--- a/signin.html
+++ b/signin.html
@@ -58,7 +58,8 @@
                             </ul>
 
                             <!-- Get Tickets Button -->
-                            <a href="#" class="btn confer-btn mt-3 mt-lg-0 ml-3 ml-lg-5">Get Tickets <i class="zmdi zmdi-long-arrow-right"></i></a>
+                            <a href="#" class="btn confer-btn mt-3 mt-lg-0 ml-3 ml-lg-5">Get Tickets <i
+                                    class="zmdi zmdi-long-arrow-right"></i></a>
                         </div>
                         <!-- Nav End -->
                     </div>
@@ -69,7 +70,8 @@
     <!-- Header Area End -->
 
     <!-- Breadcrumb Area Start -->
-    <section class="breadcrumb-area bg-img bg-gradient-overlay jarallax" style="background-image: url(img/bg-img/27.jpg);">
+    <section class="breadcrumb-area bg-img bg-gradient-overlay jarallax"
+        style="background-image: url(img/bg-img/27.jpg);">
         <div class="container h-100">
             <div class="row h-100 align-items-center">
                 <div class="col-12">
@@ -78,7 +80,8 @@
                         <nav aria-label="breadcrumb">
                             <ol class="breadcrumb">
                                 <li class="breadcrumb-item"><a href="index.html"></a>Home</li>
-                                <li class="breadcrumb-item active" aria-current="page">Sign In: Save research talks and add resources!</li>
+                                <li class="breadcrumb-item active" aria-current="page">Sign In: Save research talks and
+                                    add resources!</li>
                             </ol>
                         </nav>
                     </div>
@@ -95,11 +98,32 @@
                 <!-- Heading -->
                 <div class="col-12">
                     <div class="section-heading-3 text-center wow fadeInUp" data-wow-delay="300ms">
-                       
+
                         <h4>Here's where people will sign in to favorite talks and add resources</h4>
                     </div>
                 </div>
             </div>
+        </div>
+    </section>
+    <div class="container" style="centered">
+        <form action="/login" method="post">
+            <div>
+                <label>Username:</label>
+                <input type="text" name="username" />
+            </div>
+            <div>
+                <label>Password:</label>
+                <input type="password" name="password" />
+            </div>
+            <div>
+                <input type="submit" value="Log In" />
+            </div>
+        </form>
+    </div>
+    <br>
+    <br>
+    <br>
+    <br>
 
 
     <!-- Footer Area Start -->
