--- a/speakers.html
+++ b/speakers.html
@@ -91,12 +91,26 @@
     </section>
     <!-- Breadcrumb Area End -->
 
+
+
+
     <!-- Our research talks Area Start -->
-    <section class="our-speaker-area section-padding-100">
+    <section class="our-speaker-area bg-img bg-gradient-overlay section-padding-100-60"
+        style="background-image: url(img/bg-img/3.jpg);">
         <div class="container">
             <div class="row">
+                <!-- Heading -->
+                <div class="col-12">
+                    <div class="section-heading text-center wow fadeInUp" data-wow-delay="300ms">
+                        <p>Our research talks</p>
+                        <h4>Who’s speaking</h4>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
                 <!-- Single Speaker Area -->
-                <div class="col-12 col-sm-6 col-lg-4">
+                <div class="col-12 col-md-6 col-lg-4">
                     <div class="single-speaker-area bg-gradient-overlay-2 wow fadeInUp" data-wow-delay="300ms">
                         <!-- Thumb -->
                         <div class="speaker-single-thumb">
@@ -118,7 +132,7 @@
                 </div>
 
                 <!-- Single Speaker Area -->
-                <div class="col-12 col-sm-6 col-lg-4">
+                <div class="col-12 col-md-6 col-lg-4">
                     <div class="single-speaker-area bg-gradient-overlay-2 wow fadeInUp" data-wow-delay="300ms">
                         <!-- Thumb -->
                         <div class="speaker-single-thumb">
@@ -140,7 +154,7 @@
                 </div>
 
                 <!-- Single Speaker Area -->
-                <div class="col-12 col-sm-6 col-lg-4">
+                <div class="col-12 col-md-6 col-lg-4">
                     <div class="single-speaker-area bg-gradient-overlay-2 wow fadeInUp" data-wow-delay="300ms">
                         <!-- Thumb -->
                         <div class="speaker-single-thumb">
@@ -162,7 +176,7 @@
                 </div>
 
                 <!-- Single Speaker Area -->
-                <div class="col-12 col-sm-6 col-lg-4">
+                <div class="col-12 col-md-6 col-lg-4">
                     <div class="single-speaker-area bg-gradient-overlay-2 wow fadeInUp" data-wow-delay="300ms">
                         <!-- Thumb -->
                         <div class="speaker-single-thumb">
@@ -177,14 +191,14 @@
                         </div>
                         <!-- Info -->
                         <div class="speaker-info">
-                            <h5>Paul Stamets</h5>
-                            <p>Speaker, Author, Mycologist, Medical Researcher, and Entrepreneur</p>
+                            <h5>Betty Aldworth</h5>
+                            <p>Executive Director of Students for Sensible Drug Policy (SSDP)</p>
                         </div>
                     </div>
                 </div>
 
                 <!-- Single Speaker Area -->
-                <div class="col-12 col-sm-6 col-lg-4">
+                <div class="col-12 col-md-6 col-lg-4">
                     <div class="single-speaker-area bg-gradient-overlay-2 wow fadeInUp" data-wow-delay="300ms">
                         <!-- Thumb -->
                         <div class="speaker-single-thumb">
@@ -207,7 +221,7 @@
                 </div>
 
                 <!-- Single Speaker Area -->
-                <div class="col-12 col-sm-6 col-lg-4">
+                <div class="col-12 col-md-6 col-lg-4">
                     <div class="single-speaker-area bg-gradient-overlay-2 wow fadeInUp" data-wow-delay="300ms">
                         <!-- Thumb -->
                         <div class="speaker-single-thumb">
@@ -228,12 +242,13 @@
                     </div>
                 </div>
 
+
                 <!-- Single Speaker Area -->
-                <div class="col-12 col-sm-6 col-lg-4">
+                <div class="col-12 col-md-6 col-lg-4">
                     <div class="single-speaker-area bg-gradient-overlay-2 wow fadeInUp" data-wow-delay="300ms">
                         <!-- Thumb -->
                         <div class="speaker-single-thumb">
-                            <img src="img/bg-img/7.jpg" alt="">
+                            <img src="img/bg-img/15.jpg" alt="">
                         </div>
                         <!-- Social Info -->
                         <div class="social-info">
@@ -244,18 +259,19 @@
                         </div>
                         <!-- Info -->
                         <div class="speaker-info">
-                            <h5>Paul Stamets</h5>
-                            <p>Speaker, Author, Mycologist, Medical Researcher, and Entrepreneur</p>
+                            <h5>George Greer, MD</h5>
+                            <p>President, Heffter Research Institute</p>
                         </div>
                     </div>
                 </div>
 
+
                 <!-- Single Speaker Area -->
-                <div class="col-12 col-sm-6 col-lg-4">
+                <div class="col-12 col-md-6 col-lg-4">
                     <div class="single-speaker-area bg-gradient-overlay-2 wow fadeInUp" data-wow-delay="300ms">
                         <!-- Thumb -->
                         <div class="speaker-single-thumb">
-                            <img src="img/bg-img/8.jpg" alt="">
+                            <img src="img/bg-img/22.jpg" alt="">
                         </div>
                         <!-- Social Info -->
                         <div class="social-info">
@@ -266,19 +282,18 @@
                         </div>
                         <!-- Info -->
                         <div class="speaker-info">
-                            <h5>Tim Ferriss</h5>
-                            <p>Entrepreneur, Author, and Podcaster
-                            </p>
+                            <h5>Bia Labate, Ph.D.</h5>
+                            <p>Executive Director of the Chacruna Institute for Psychedelic Plant Medicines</p>
                         </div>
                     </div>
                 </div>
 
                 <!-- Single Speaker Area -->
-                <div class="col-12 col-sm-6 col-lg-4">
+                <div class="col-12 col-md-6 col-lg-4">
                     <div class="single-speaker-area bg-gradient-overlay-2 wow fadeInUp" data-wow-delay="300ms">
                         <!-- Thumb -->
                         <div class="speaker-single-thumb">
-                            <img src="img/bg-img/9.jpg" alt="">
+                            <img src="img/bg-img/16.jpg" alt="">
                         </div>
                         <!-- Social Info -->
                         <div class="social-info">
@@ -289,15 +304,14 @@
                         </div>
                         <!-- Info -->
                         <div class="speaker-info">
-                            <h5>Allison Feduccia, PhD</h5>
-                            <p>Senior Clinical Data Scientist, MAPS Public Benefit Corporation (MAPS PBC)</p>
+                            <h5>Sophia Korb, PhD</h5>
+                            <p>Researcher, Fadiman Group</p>
                         </div>
                     </div>
                 </div>
-
                 <div class="col-12">
-                    <div class="more-speaker-btn text-center mt-20 wow fadeInUp" data-wow-delay="300ms">
-                        <a class="btn confer-btn" href="#"> view all speakers <i
+                    <div class="more-speaker-btn text-center mt-20 mb-40 wow fadeInUp" data-wow-delay="300ms">
+                        <a class="btn confer-btn-white" href="#"> view all speakers <i
                                 class="zmdi zmdi-long-arrow-right"></i></a>
                     </div>
                 </div>
