making login stuff work

--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
     <meta name="description" content="">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+      <!--Below is my single react component and the library references that allow me to use react w/o npm installing anything!-->
+    <!--Update: As it turns out, breadcrumb is also a react component!-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.4.2/react.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.4.2/react-dom.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.21.1/babel.min.js"></script>
+    <script type="text/babel">
+
+    <Spinner animation="grow" />
+    </script>
+
+    
 
     <!-- Title -->
     <title>Psychedelic Science Summit 2020 </title>
