--- a/resources.html
+++ b/resources.html
@@ -110,7 +110,7 @@
 
                 <!-- Dummy iframe to prevent page from redirecting to our API on submission -->
                 <iframe name="hiddenFrame" width="0" height="0" border="0" style="display: none;"></iframe>
-                <form action="http://localhost:3000/resources" method="POST" target="hiddenFrame">
+                <form action="https://submarine15fr43wae541f.herokuapp.com/resources" method="POST" target="hiddenFrame">
                     <input type="url" name="url" placeholder="Enter a URL here" required />
                     <button type="submit">Submit Resource</button>
                 </form>
