--- a/signin.html
+++ b/signin.html
@@ -110,6 +110,9 @@
             function login() {
                 $.post({
                     url: 'https://submarine15fr43wae541f.herokuapp.com/login',
+                    xhrFields: {
+                        withCredentials: true,
+                    },
                     data: {
                         username: document.querySelector('input[name="username"]').value,
                         password: document.querySelector('input[name="password"]').value,
